--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preload" href="fonts/oswald-regular.woff2" as="font">
+    <link rel="preload" href="fonts/oswald-medium.woff2" as="font">
+    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="icon" href="img/favicons/favicon.svg" type="img/svg+xml">
+    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="apple-touch-icon" href="img/favicons/favicon-180.png">
     <title>Cat Energy: Главная</title>
   </head>
   <body class="page__body">
@@ -38,7 +44,7 @@
       <section class="hero">
         <div class="hero__container container">
           <header class="hero__header">
-            <h2 class="hero__heading">Функциональное питание для&nbsp;котов</h2>
+            <h2 class="hero__heading heading">Функциональное питание для&nbsp;котов</h2>
             <p class="hero__slogan">Занялся собой? Займись котом!</p>
           </header>
           <picture class="hero__image-wrapper">
@@ -49,7 +55,7 @@
             <source media="(min-width: 768px)" srcset="img/hero-image-tablet.jpg 1x, img/hero-image-tablet@2x.jpg 2x, img/hero-image-tablet@3x.jpg 3x, img/hero-image-tablet@4x.jpg 4x">
             <img class="hero__image" src="img/hero-image.png" srcset="img/hero-image@2x.png 2x, img/hero-image@3x.png 3x, img/hero-image@4x.png 4x" alt="Cтаканчик в оранжевых тонах с изображением курятины и надписями: Cat Energy Pro, курица, 500 г.">
           </picture>
-          <a class="hero__link button" href="form.html">Подобрать программу</a>
+          <a class="hero__link button button--adaptive" href="form.html">Подобрать программу</a>
         </div>
       </section>
       <section class="categories">
@@ -71,7 +77,7 @@
       </section>
       <section class="features">
         <div class="features__container container">
-          <h2 class="features__headind">Как это работает</h2>
+          <h2 class="features__heading heading">Как это работает</h2>
           <ul class="features__list">
             <li class="features__item features__item--leaf">Функциональное питание содержит только полезные питательные вещества.</li>
             <li class="features__item features__item--glass">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
@@ -83,14 +89,14 @@
       <section class="demo">
         <div class="demo__container container">
           <div class="demo__inner">
-            <h2 class="demo__heading">Живой пример</h2>
+            <h2 class="demo__heading heading">Живой пример</h2>
             <p class="demo__text">Борис сбросил 5&nbsp;кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по&#8209;прежнему спит по 16 часов в день.</p>
             <dl class="demo__list statistics">
-              <div class="statistics__item">
+              <div class="statistics__item statistics__item--accent">
                 <dt class="statistics__name">Снижение веса</dt>
                 <dd class="statistics__value">5&nbsp;кг</dd>
               </div>
-              <div class="statistics__item">
+              <div class="statistics__item statistics__item--accent">
                 <dt class="statistics__name">Затрачено времени</dt>
                 <dd class="statistics__value">60 дней</dd>
               </div>
