--- a/source/form.html
+++ b/source/form.html
@@ -12,20 +12,20 @@
     <title>Cat Energy: Подбор программы</title>
   </head>
   <body class="page__body">
-    <header class="page__header page-header">
+    <header class="page__header page-header page-header--nojs"> <!-- page-header--nojs -->
       <div class="page-header__container container">
         <a class="page-header__logo" href="index.html">
-          <picture>
+          <picture class="page-header__logo-image-wrapper">
             <source media="(min-width: 1360px)" srcset="img/logo-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
             <img class="page-header__logo-image" src="img/logo.svg" alt="Логотип: нарисованный белый кот в красной маске и красном плаще на фоне оранжевого солнца, справа надпись CAT ENERGY.">
           </picture>
         </a>
-        <button class="page-header__toggler" type="button">
+        <button class="page-header__toggler" type="button"> <!-- page-header__toggler--close -->
           <span class="visually-hidden">Открыть меню</span>
         </button>
-        <nav class="page-header__navigation">
-          <ul class="site-navigation">
+        <nav class="page-header__navigation"> <!-- page-header__navigation--close -->
+          <ul class="page-header__navigation-list site-navigation">
             <li class="site-navigation__item">
               <a class="site-navigation__link" href="index.html">Главная</a>
             </li>
@@ -40,91 +40,101 @@
       </div>
     </header>
     <main>
-      <h1 class="page__heading heading">Подбор программы питания <span class="visually-hidden">«Cat Energy»</span></h1>
-      <form class="form" action="https://echo.htmlacademy.ru" method="post">
-        <p class="form__desc">Заполните анкету, и мы подберём программу питания для вашего кота</p>
-        <small class="visually-hidden">Поля со знаком * обязательны к заполнению.</small>
-        <fieldset class="form__section">
-          <legend class="visually-hidden">Данные кота</legend>
-          <label class="form__field textfield">
-            <span class="textfield__label">Имя:*</span>
-            <input class="textfield__control" type="text" name="pet-name" placeholder="Барсик">
-          </label>
-          <label class="form__field textfield">
-            <span class="textfield__label">Вес (кг):*</span>
-            <input class="textfield__control" type="number" name="pet-weight" min="0" placeholder="7">
-          </label>
-          <label class="form__field textfield">
-            <span class="textfield__label">Возраст (лет):</span>
-            <input class="textfield__control" type="number" name="pet-age" min="0" placeholder="7">
-          </label>
-          <div>
-            <p>Цель:</p>
-            <div>
-              <label class="form__field radiobutton">
-                <input class="radiobutton__control visually-hidden" type="radio" name="purpose" value="weight-loss" checked>
-                <span class="radiobutton__label">Похудение</span>
+      <div class="container container--narrow">
+        <h1 class="page__heading heading">Подбор программы <span class="visually-hidden">питания «Cat Energy»</span></h1>
+        <form class="page__form form" action="https://echo.htmlacademy.ru" method="post">
+          <p class="form__desc">Заполните анкету, и мы подберём программу питания для вашего кота</p>
+          <small class="visually-hidden">Поля со знаком * обязательны к заполнению.</small>
+          <fieldset class="form__section form__section--user">
+            <legend class="visually-hidden">Данные кота</legend>
+            <label class="form__field textfield textfield--required">
+              <span class="textfield__label">Имя:*</span>
+              <input class="textfield__control" type="text" name="pet-name" placeholder="Барсик">
+            </label>
+            <label class="form__field textfield textfield--required">
+              <span class="textfield__label">Вес (кг):*</span>
+              <input class="textfield__control" type="number" name="pet-weight" min="0" placeholder="7">
+            </label>
+            <label class="form__field textfield">
+              <span class="textfield__label">Возраст (лет):</span>
+              <input class="textfield__control" type="number" name="pet-age" min="0" placeholder="7">
+            </label>
+            <div class="form__radiogroup radiogroup">
+              <p class="visually-hidden">Цель:</p>
+              <div class="radiogroup__fields">
+                <label class="radiogroup__field radiobutton">
+                  <input class="radiobutton__control visually-hidden" type="radio" name="purpose" value="weight-loss" checked>
+                  <span class="radiobutton__label">Похудение</span>
+                </label>
+                <label class="radiogroup__field radiobutton">
+                  <input class="radiobutton__control visually-hidden" type="radio" name="purpose" value="weight-gain">
+                  <span class="radiobutton__label">Набор массы</span>
+                </label>
+                <label class="radiogroup__field radiobutton">
+                  <input class="radiobutton__control visually-hidden" type="radio" name="purpose" value="unknown">
+                  <span class="radiobutton__label">Не знаю (нужен ваш совет)</span>
+                </label>
+              </div>
+            </div>
+          </fieldset>
+          <fieldset class="form__section form__section--contacts">
+            <legend class="form__section-heading heading heading--small heading--decorative">
+              <span class="heading__text">Контактные данные (владельца кота)</span>
+            </legend>
+            <label class="form__field textfield textfield--required textfield--icon--email">
+              <span class="textfield__label">E-mail:*</span>
+              <input class="textfield__control" type="email" name="owner-email" placeholder="kuklachev@gmail.com">
+            </label>
+            <label class="form__field textfield textfield--required textfield--icon--phone">
+              <span class="textfield__label">Телефон:*</span>
+              <input class="textfield__control" type="tel" name="owner-tel" placeholder="8 (960) 900-60-90">
+            </label>
+          </fieldset>
+          <fieldset class="form__section">
+            <legend class="form__section-heading heading heading--small heading--decorative">
+              <span class="heading__text">Комментарий</span>
+            </legend>
+            <label class="form__field textarea">
+              <span class="visually-hidden">Повадки вашего кота:</span>
+              <textarea class="textarea__control" name="comment" placeholder="Расскажите обо всех повадках кота"></textarea>
+            </label>
+          </fieldset>
+          <fieldset class="form__section">
+            <legend class="form__section-heading heading heading--small heading--decorative">
+              <span class="heading__text">Дополнительно</span>
+            </legend>
+            <div class="form__checkbox-group checkbox-group">
+              <label class="checkbox-group__field checkbox">
+                <input class="checkbox__control visually-hidden" type="checkbox" name="additionally" value="sugar-substitute" checked>
+                <span class="checkbox__label">Сахарозаменитель</span>
               </label>
-              <label class="form__field radiobutton">
-                <input class="radiobutton__control visually-hidden" type="radio" name="purpose" value="weight-gain">
-                <span class="radiobutton__label">Набор массы</span>
+              <label class="checkbox-group__field checkbox">
+                <input class="checkbox__control visually-hidden" type="checkbox" name="additionally" value="drinking-water">
+                <span class="checkbox__label">Питьевая вода</span>
               </label>
-              <label class="form__field radiobutton">
-                <input class="radiobutton__control visually-hidden" type="radio" name="purpose" value="unknown">
-                <span class="radiobutton__label">Не знаю (нужен ваш совет)</span>
+              <label class="checkbox-group__field checkbox">
+                <input class="checkbox__control visually-hidden" type="checkbox" name="additionally" value="milk">
+                <span class="checkbox__label">Молоко</span>
+              </label>
+              <label class="checkbox-group__field checkbox">
+                <input class="checkbox__control visually-hidden" type="checkbox" name="additionally" value="vitamins">
+                <span class="checkbox__label">Витамины</span>
               </label>
             </div>
+          </fieldset>
+          <div class="form__controls">
+            <button class="form__button button button--adaptive" type="submit">Отправить заявку</button>
+            <small class="form__comment" aria-hidden="true">* &mdash; Обязательные поля</small>
           </div>
-        </fieldset>
-        <fieldset class="form__section">
-          <legend class="heading heading--small">Контактные данные (владельца кота)</legend>
-          <label class="form__field textfield">
-            <span class="textfield__label">E-mail:*</span>
-            <input class="textfield__control" type="email" name="owner-email" placeholder="kuklachev@gmail.com">
-          </label>
-          <label class="form__field textfield">
-            <span class="textfield__label">Телефон:*</span>
-            <input class="textfield__control" type="tel" name="owner-tel" placeholder="8 (960) 900-60-90">
-          </label>
-        </fieldset>
-        <fieldset class="form__section">
-          <legend class="heading heading--small">Комментарий</legend>
-          <label class="form__field textarea">
-            <span class="textarea__label">Повадки вашего кота:</span>
-            <textarea class="textarea__control" name="comment" placeholder="Расскажите обо всех повадках кота"></textarea>
-          </label>
-        </fieldset>
-        <fieldset class="form__section">
-          <legend class="heading heading--small">Дополнительно</legend>
-          <label class="form__field checkbox">
-            <input class="checkbox__control visually-hidden" type="checkbox" name="additionally" value="sugar-substitute" checked>
-            <span class="checkbox__label">Сахарозаменитель</span>
-          </label>
-          <label class="form__field checkbox">
-            <input class="checkbox__control visually-hidden" type="checkbox" name="additionally" value="drinking-water">
-            <span class="checkbox__label">Питьевая вода</span>
-          </label>
-          <label class="form__field checkbox">
-            <input class="checkbox__control visually-hidden" type="checkbox" name="additionally" value="milk">
-            <span class="checkbox__label">Молоко</span>
-          </label>
-          <label class="form__field checkbox">
-            <input class="checkbox__control visually-hidden" type="checkbox" name="additionally" value="vitamins">
-            <span class="checkbox__label">Витамины</span>
-          </label>
-        </fieldset>
-        <div>
-          <button class="button button--adaptive" type="submit">Отправить заявку</button>
-          <small class="form__comment" aria-hidden="true">* &mdash; Обязательные поля</small>
-        </div>
-      </form>
+        </form>
+      </div>
     </main>
     <footer class="page__footer page-footer">
       <section class="page-footer__contacts contacts">
         <h2 class="visually-hidden">Контакты</h2>
-        <div class="contacts__card">
+        <div class="contacts__card contacts__card--alter">
           <p class="contacts__lead">Приглашаем<br> к&nbsp;сотрудничеству<br> дилеров!</p>
-          <address class="contacts__text">
+          <address class="contacts__text contacts__text--address">
             <span class="contacts__text-part">Санкт-Петербург</span> ул.&nbsp;Большая<br> Конюшенная, д.&nbsp;19/8
           </address>
         </div>
@@ -138,34 +148,38 @@
         </picture>
       </section>
       <div class="page-footer__container container">
-        <a class="page-footer__logo" href="index.html">
-          <img class="page-footer__logo-img" src="img/footer-logo.svg" width="128" height="24" alt="Логотип: надпись CAT ENERGY.">
-        </a>
-        <ul class="page-footer__socials socials">
-          <li class="socials__item">
-            <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy" target="_blank">
-              <span class="visually-hidden">Вконтакте</span>
-            </a>
-          </li>
-          <li class="socials__item">
-            <a class="socials__link socials__link--instagram" href="https://www.instagram.com/htmlacademy" target="_blank">
-              <span class="visually-hidden">Инстаграм</span>
-            </a>
-          </li>
-          <li class="socials__item">
-            <a class="socials__link socials__link--facebook" href="https://www.facebook.com/htmlacademy" target="_blank">
-              <span class="visually-hidden">Фейсбук</span>
-            </a>
-          </li>
-        </ul>
-        <p class="page-footer__copyright copyright">
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
-            <span class="copyright__name">HTML Academy</span>
-            <svg class="copyright__logo" role="img" width="27" height="34" aria-label="Логотип HTML-академии в виде квадратной академической шапочки.">
+        <div class="page-footer__item">
+          <a class="page-footer__logo" href="index.html">
+            <img class="page-footer__logo-img" src="img/footer-logo.svg" width="128" height="24" alt="Логотип: надпись CAT ENERGY.">
+          </a>
+        </div>
+        <div class="page-footer__item">
+          <ul class="page-footer__socials socials">
+            <li class="socials__item">
+              <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy" target="_blank">
+                <span class="visually-hidden">Вконтакте</span>
+              </a>
+            </li>
+            <li class="socials__item">
+              <a class="socials__link socials__link--instagram" href="https://www.instagram.com/htmlacademy" target="_blank">
+                <span class="visually-hidden">Инстаграм</span>
+              </a>
+            </li>
+            <li class="socials__item">
+              <a class="socials__link socials__link--facebook" href="https://www.facebook.com/htmlacademy" target="_blank">
+                <span class="visually-hidden">Фейсбук</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="page-footer__item page-footer__item--align--right">
+          <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
+            <span class="page-footer__copyright-name">HTML Academy</span>
+            <svg class="page-footer__copyright-logo" role="img" width="27" height="34" aria-label="Логотип HTML-академии в виде квадратной академической шапочки.">
               <use xlink:href="img/sprite.svg#copyright-logo"></use>
             </svg>
           </a>
-        </p>
+        </div>
       </div>
     </footer>
   </body>
