--- a/source/index.html
+++ b/source/index.html
@@ -12,20 +12,20 @@
     <title>Cat Energy: Главная</title>
   </head>
   <body class="page__body">
-    <header class="page__header page-header">
+    <header class="page__header page-header page-header--nojs"> <!-- page-header--nojs -->
       <div class="page-header__container container">
         <a class="page-header__logo">
-          <picture>
+          <picture class="page-header__logo-image-wrapper">
             <source media="(min-width: 1360px)" srcset="img/logo-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
             <img class="page-header__logo-image" src="img/logo.svg" alt="Логотип: нарисованный белый кот в красной маске и красном плаще на фоне оранжевого солнца, справа надпись CAT ENERGY.">
           </picture>
         </a>
-        <button class="page-header__toggler" type="button">
+        <button class="page-header__toggler" type="button"> <!-- page-header__toggler--close -->
           <span class="visually-hidden">Открыть меню</span>
         </button>
-        <nav class="page-header__navigation">
-          <ul class="site-navigation">
+        <nav class="page-header__navigation"> <!-- page-header__navigation--close -->
+          <ul class="page-header__navigation-list site-navigation site-navigation--alter">
             <li class="site-navigation__item">
               <a class="site-navigation__link site-navigation__link--current">Главная</a>
             </li>
@@ -91,20 +91,24 @@
           <div class="demo__inner">
             <h2 class="demo__heading heading">Живой пример</h2>
             <p class="demo__text">Борис сбросил 5&nbsp;кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по&#8209;прежнему спит по 16 часов в день.</p>
-            <dl class="demo__list statistics">
-              <div class="statistics__item statistics__item--accent">
-                <dt class="statistics__name">Снижение веса</dt>
-                <dd class="statistics__value">5&nbsp;кг</dd>
+            <div class="demo__statistics statistics">
+              <div class="statistics__container">
+                <dl class="statistics__list">
+                  <div class="statistics__item statistics__item--accent">
+                    <dt class="statistics__name">Снижение веса</dt>
+                    <dd class="statistics__value">5&nbsp;кг</dd>
+                  </div>
+                  <div class="statistics__item statistics__item--accent">
+                    <dt class="statistics__name">Затрачено времени</dt>
+                    <dd class="statistics__value">60 дней</dd>
+                  </div>
+                  <div class="statistics__item statistics__item--summary">
+                    <dt class="statistics__name">Затраты на питание:</dt>
+                    <dd class="statistics__value">15&nbsp;000&nbsp;&#8381;</dd>
+                  </div>
+                </dl>
               </div>
-              <div class="statistics__item statistics__item--accent">
-                <dt class="statistics__name">Затрачено времени</dt>
-                <dd class="statistics__value">60 дней</dd>
-              </div>
-              <div class="statistics__item">
-                <dt class="statistics__name">Затраты на питание:</dt>
-                <dd class="statistics__value">15&nbsp;000&nbsp;&#8381;</dd>
-              </div>
-            </dl>
+            </div>
           </div>
           <div class="demo__separator separator">
             <div class="separator__content">
@@ -114,7 +118,7 @@
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/customer-before-tablet.webp 1x, img/customer-before-tablet@2x.webp 2x, img/customer-before-tablet@3x.webp 3x, img/customer-before-tablet@4x.webp 4x">
                   <source type="image/webp" srcset="img/customer-before.webp 1x, img/customer-before@2x.webp 2x, img/customer-before@3x.webp 3x, img/customer-before@4x.webp 4x">
                   <source media="(min-width: 768px)" srcset="img/customer-before-tablet.png 1x, img/customer-before-tablet@2x.png 2x, img/customer-before-tablet@3x.png 3x, img/customer-before-tablet@4x.png 4x">
-                  <img class="separator__img" src="img/customer-before.png" srcset="img/customer-before@2x.png 2x, img/customer-before@3x.png 3x, img/customer-before@4x.png 4x" alt="Пушистый толстый кот.">
+                  <img class="separator__image" src="img/customer-before.png" srcset="img/customer-before@2x.png 2x, img/customer-before@3x.png 3x, img/customer-before@4x.png 4x" alt="Пушистый толстый кот.">
                 </picture>
               </figure>
               <figure class="separator__item separator__item--after">
@@ -123,7 +127,7 @@
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/customer-after-tablet.webp 1x, img/customer-after-tablet@2x.webp 2x, img/customer-after-tablet@3x.webp 3x, img/customer-after-tablet@4x.webp 4x">
                   <source type="image/webp" srcset="img/customer-after.webp 1x, img/customer-after@2x.webp 2x, img/customer-after@3x.webp 3x, img/customer-after@4x.webp 4x">
                   <source media="(min-width: 768px)" srcset="img/customer-after-tablet.png 1x, img/customer-after-tablet@2x.png 2x, img/customer-after-tablet@3x.png 3x, img/customer-after-tablet@4x.png 4x">
-                  <img class="separator__img" src="img/customer-after.png" srcset="img/customer-after@2x.png 2x, img/customer-after@3x.png 3x, img/customer-after@4x.png 4x" alt="Очень тощий кот.">
+                  <img class="separator__image" src="img/customer-after.png" srcset="img/customer-after@2x.png 2x, img/customer-after@3x.png 3x, img/customer-after@4x.png 4x" alt="Очень тощий кот.">
                 </picture>
               </figure>
             </div>
@@ -149,7 +153,7 @@
         <h2 class="visually-hidden">Контакты</h2>
         <div class="contacts__card">
           <p class="contacts__lead">Приглашаем<br> к&nbsp;сотрудничеству<br> дилеров!</p>
-          <address class="contacts__text">
+          <address class="contacts__text contacts__text--address">
             <span class="contacts__text-part">Санкт-Петербург</span> ул.&nbsp;Большая<br> Конюшенная, д.&nbsp;19/8
           </address>
         </div>
@@ -163,34 +167,38 @@
         </picture>
       </section>
       <div class="page-footer__container container">
-        <a class="page-footer__logo">
-          <img class="page-footer__logo-img" src="img/footer-logo.svg" width="128" height="24" alt="Логотип: надпись CAT ENERGY.">
-        </a>
-        <ul class="page-footer__socials socials">
-          <li class="socials__item">
-            <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy" target="_blank">
-              <span class="visually-hidden">Вконтакте</span>
-            </a>
-          </li>
-          <li class="socials__item">
-            <a class="socials__link socials__link--instagram" href="https://www.instagram.com/htmlacademy" target="_blank">
-              <span class="visually-hidden">Инстаграм</span>
-            </a>
-          </li>
-          <li class="socials__item">
-            <a class="socials__link socials__link--facebook" href="https://www.facebook.com/htmlacademy" target="_blank">
-              <span class="visually-hidden">Фейсбук</span>
-            </a>
-          </li>
-        </ul>
-        <p class="page-footer__copyright copyright">
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
-            <span class="copyright__name">HTML Academy</span>
-            <svg class="copyright__logo" role="img" width="27" height="34" aria-label="Логотип HTML-академии в виде квадратной академической шапочки.">
+        <div class="page-footer__item">
+          <a class="page-footer__logo">
+            <img class="page-footer__logo-img" src="img/footer-logo.svg" width="128" height="24" alt="Логотип: надпись CAT ENERGY.">
+          </a>
+        </div>
+        <div class="page-footer__item">
+          <ul class="page-footer__socials socials">
+            <li class="socials__item">
+              <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy" target="_blank">
+                <span class="visually-hidden">Вконтакте</span>
+              </a>
+            </li>
+            <li class="socials__item">
+              <a class="socials__link socials__link--instagram" href="https://www.instagram.com/htmlacademy" target="_blank">
+                <span class="visually-hidden">Инстаграм</span>
+              </a>
+            </li>
+            <li class="socials__item">
+              <a class="socials__link socials__link--facebook" href="https://www.facebook.com/htmlacademy" target="_blank">
+                <span class="visually-hidden">Фейсбук</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="page-footer__item page-footer__item--align--right">
+          <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
+            <span class="page-footer__copyright-name">HTML Academy</span>
+            <svg class="page-footer__copyright-logo" role="img" width="27" height="34" aria-label="Логотип HTML-академии в виде квадратной академической шапочки.">
               <use xlink:href="img/sprite.svg#copyright-logo"></use>
             </svg>
           </a>
-        </p>
+        </div>
       </div>
     </footer>
   </body>
