--- a/source/form.html
+++ b/source/form.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="preload" href="fonts/oswald-regular.woff2" as="font">
-    <link rel="preload" href="fonts/oswald-medium.woff2" as="font">
+    <link rel="preload" href="fonts/oswald-regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="fonts/oswald-medium.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="icon" href="img/favicons/favicon.svg" type="img/svg+xml">
     <link rel="manifest" href="manifest.webmanifest">
