feat: add script to hide/show navigation menu

--- a/source/form.html
+++ b/source/form.html
@@ -21,7 +21,7 @@
             <img class="page-header__logo-image" src="img/logo.svg" alt="Логотип: нарисованный белый кот в красной маске и красном плаще на фоне оранжевого солнца, справа надпись CAT ENERGY.">
           </picture>
         </a>
-        <button class="page-header__toggler" type="button"> <!-- page-header__toggler--close -->
+        <button class="page-header__toggler" type="button" aria-controls="page-header__navigation" aria-expanded="false"> <!-- page-header__toggler--close -->
           <span class="visually-hidden">Открыть меню</span>
         </button>
         <nav class="page-header__navigation"> <!-- page-header__navigation--close -->
@@ -182,5 +182,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
