--- a/source/index.html
+++ b/source/index.html
@@ -21,10 +21,10 @@
             <img class="page-header__logo-image" src="img/logo.svg" alt="Логотип: нарисованный белый кот в красной маске и красном плаще на фоне оранжевого солнца, справа надпись CAT ENERGY.">
           </picture>
         </a>
-        <button class="page-header__toggler" type="button"> <!-- page-header__toggler--close -->
+        <button class="page-header__toggler" type="button" aria-controls="page-header__navigation" aria-expanded="false"> <!-- page-header__toggler--close -->
           <span class="visually-hidden">Открыть меню</span>
         </button>
-        <nav class="page-header__navigation"> <!-- page-header__navigation--close -->
+        <nav class="page-header__navigation" id="page-header__navigation"> <!-- page-header__navigation--close -->
           <ul class="page-header__navigation-list site-navigation site-navigation--alter">
             <li class="site-navigation__item">
               <a class="site-navigation__link site-navigation__link--current">Главная</a>
@@ -201,5 +201,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
