feat: add interactive map

--- a/source/form.html
+++ b/source/form.html
@@ -146,6 +146,7 @@
           <source media="(min-width: 321px)" srcset="img/location-tablet.png 1x, img/location-tablet@2x.png 2x, img/location-tablet@3x.png 3x, img/location-tablet@4x.png 4x">
           <img class="contacts__img" src="img/location.png" srcset="img/location@2x.png 2x, img/location@3x.png 3x, img/location@4x.png 4x" alt="Расположение магазина на карте по адресу: Санкт-Петербург, ул. Большая Конюшенная, д. 19/8.">
         </picture>
+        <div class="contacts__interactive-map" id="contacts__interactive-map"></div>
       </section>
       <div class="page-footer__container container">
         <div class="page-footer__item">
@@ -182,6 +183,7 @@
         </div>
       </div>
     </footer>
+    <script src="https://maps.api.2gis.ru/2.0/loader.js?pkg=full"></script>
     <script src="js/script.min.js"></script>
   </body>
 </html>
