--- a/source/index.html
+++ b/source/index.html
@@ -12,6 +12,7 @@
     <title>Cat Energy: Главная</title>
   </head>
   <body class="page__body">
+    <div class="preloader preloader--nojs" aria-hidden="true"></div>
     <header class="page__header page-header page-header--nojs"> <!-- page-header--nojs -->
       <div class="page-header__container container">
         <a class="page-header__logo">
