--- a/source/index.html
+++ b/source/index.html
@@ -10,6 +10,8 @@
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="apple-touch-icon" href="img/favicons/favicon-180.png">
     <title>Cat Energy: Главная</title>
+    <meta name="description" content="Интернет-магазин кошачьего питания">
+    <meta name="keywords" content="Cat Energy, кошачье питание, кошачья диета, похудение кошек, набор массы котов">
   </head>
   <body class="page__body">
     <div class="preloader preloader--nojs" aria-hidden="true"></div>
