refactor: use svg-image as svg-sprite

--- a/source/index.html
+++ b/source/index.html
@@ -199,7 +199,7 @@
           <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
             <span class="page-footer__copyright-name">HTML Academy</span>
             <svg class="page-footer__copyright-logo" role="img" width="27" height="34" aria-label="Логотип HTML-академии в виде квадратной академической шапочки.">
-              <use xlink:href="img/sprite.svg#copyright-logo"></use>
+              <use xlink:href="img/copyright-logo.svg#copyright-logo"></use>
             </svg>
           </a>
         </div>
