refactor: remove extra classes

--- a/source/form.html
+++ b/source/form.html
@@ -65,15 +65,15 @@
             <div class="form__radiogroup radiogroup">
               <p class="visually-hidden">Цель:</p>
               <div class="radiogroup__fields">
-                <label class="radiogroup__field radiobutton">
+                <label class="radiobutton">
                   <input class="radiobutton__control visually-hidden" type="radio" name="purpose" value="weight-loss" checked>
                   <span class="radiobutton__label">Похудение</span>
                 </label>
-                <label class="radiogroup__field radiobutton">
+                <label class="radiobutton">
                   <input class="radiobutton__control visually-hidden" type="radio" name="purpose" value="weight-gain">
                   <span class="radiobutton__label">Набор массы</span>
                 </label>
-                <label class="radiogroup__field radiobutton">
+                <label class="radiobutton">
                   <input class="radiobutton__control visually-hidden" type="radio" name="purpose" value="unknown">
                   <span class="radiobutton__label">Не знаю (нужен ваш совет)</span>
                 </label>
@@ -107,19 +107,19 @@
               <span class="heading__text">Дополнительно</span>
             </legend>
             <div class="form__checkbox-group checkbox-group">
-              <label class="checkbox-group__field checkbox">
+              <label class="checkbox">
                 <input class="checkbox__control visually-hidden" type="checkbox" name="additionally" value="sugar-substitute" checked>
                 <span class="checkbox__label">Сахарозаменитель</span>
               </label>
-              <label class="checkbox-group__field checkbox">
+              <label class="checkbox">
                 <input class="checkbox__control visually-hidden" type="checkbox" name="additionally" value="drinking-water">
                 <span class="checkbox__label">Питьевая вода</span>
               </label>
-              <label class="checkbox-group__field checkbox">
+              <label class="checkbox">
                 <input class="checkbox__control visually-hidden" type="checkbox" name="additionally" value="milk">
                 <span class="checkbox__label">Молоко</span>
               </label>
-              <label class="checkbox-group__field checkbox">
+              <label class="checkbox">
                 <input class="checkbox__control visually-hidden" type="checkbox" name="additionally" value="vitamins">
                 <span class="checkbox__label">Витамины</span>
               </label>
