feat: add image lazy loading

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -169,7 +169,7 @@
                   <a class="price-list__image-link" href="#!">
                     <picture>
                       <source type="image/webp" srcset="files/cat-energy-slim-buckwheat-500g@86w.webp 86w, files/cat-energy-slim-buckwheat-500g@172w.webp 172w, files/cat-energy-slim-buckwheat-500g@258w.webp 258w, files/cat-energy-slim-buckwheat-500g@344w.webp 344w, files/cat-energy-slim-buckwheat-500g@516w.webp 516w, files/cat-energy-slim-buckwheat-500g@688w.webp 688w" sizes="(min-width: 768px) 172px, 86px">
-                      <img class="price-list__image" src="files/cat-energy-slim-buckwheat-500g@86w.png" srcset="files/cat-energy-slim-buckwheat-500g@86w.png 86w, files/cat-energy-slim-buckwheat-500g@172w.png 172w, files/cat-energy-slim-buckwheat-500g@258w.png 258w, files/cat-energy-slim-buckwheat-500g@344w.png 344w, files/cat-energy-slim-buckwheat-500g@516w.png 516w, files/cat-energy-slim-buckwheat-500g@688w.png 688w" sizes="(min-width: 768px) 172px, 86px" alt="Cтаканчик в голубых тонах с изображением гречневой каши и надписями: Cat Energy Slim, Гречка, 500 г.">
+                      <img class="price-list__image" loading="lazy" src="files/cat-energy-slim-buckwheat-500g@86w.png" srcset="files/cat-energy-slim-buckwheat-500g@86w.png 86w, files/cat-energy-slim-buckwheat-500g@172w.png 172w, files/cat-energy-slim-buckwheat-500g@258w.png 258w, files/cat-energy-slim-buckwheat-500g@344w.png 344w, files/cat-energy-slim-buckwheat-500g@516w.png 516w, files/cat-energy-slim-buckwheat-500g@688w.png 688w" sizes="(min-width: 768px) 172px, 86px" alt="Cтаканчик в голубых тонах с изображением гречневой каши и надписями: Cat Energy Slim, Гречка, 500 г.">
                     </picture>
                   </a>
                 </td>
@@ -194,7 +194,7 @@
                   <a class="price-list__image-link" href="#!">
                     <picture>
                       <source type="image/webp" srcset="files/cat-energy-slim-buckwheat-1000g@86w.webp 86w, files/cat-energy-slim-buckwheat-1000g@172w.webp 172w, files/cat-energy-slim-buckwheat-1000g@258w.webp 258w, files/cat-energy-slim-buckwheat-1000g@344w.webp 344w, files/cat-energy-slim-buckwheat-1000g@516w.webp 516w, files/cat-energy-slim-buckwheat-1000g@688w.webp 688w" sizes="(min-width: 768px) 172px, 86px">
-                      <img class="price-list__image" src="files/cat-energy-slim-buckwheat-1000g@86w.png" srcset="files/cat-energy-slim-buckwheat-1000g@86w.png 86w, files/cat-energy-slim-buckwheat-1000g@172w.png 172w, files/cat-energy-slim-buckwheat-1000g@258w.png 258w, files/cat-energy-slim-buckwheat-1000g@344w.png 344w, files/cat-energy-slim-buckwheat-1000g@516w.png 516w, files/cat-energy-slim-buckwheat-1000g@688w.png 688w" sizes="(min-width: 768px) 172px, 86px" alt="Большой стакан в голубых тонах с изображением гречневой каши и надписями: Cat Energy Slim, Гречка, 1000 г.">
+                      <img class="price-list__image" loading="lazy" src="files/cat-energy-slim-buckwheat-1000g@86w.png" srcset="files/cat-energy-slim-buckwheat-1000g@86w.png 86w, files/cat-energy-slim-buckwheat-1000g@172w.png 172w, files/cat-energy-slim-buckwheat-1000g@258w.png 258w, files/cat-energy-slim-buckwheat-1000g@344w.png 344w, files/cat-energy-slim-buckwheat-1000g@516w.png 516w, files/cat-energy-slim-buckwheat-1000g@688w.png 688w" sizes="(min-width: 768px) 172px, 86px" alt="Большой стакан в голубых тонах с изображением гречневой каши и надписями: Cat Energy Slim, Гречка, 1000 г.">
                     </picture>
                   </a>
                 </td>
@@ -219,7 +219,7 @@
                   <a class="price-list__image-link" href="#!">
                     <picture>
                       <source type="image/webp" srcset="files/cat-energy-slim-rice-500g@86w.webp 86w, files/cat-energy-slim-rice-500g@172w.webp 172w, files/cat-energy-slim-rice-500g@258w.webp 258w, files/cat-energy-slim-rice-500g@344w.webp 344w, files/cat-energy-slim-rice-500g@516w.webp 516w, files/cat-energy-slim-rice-500g@688w.webp 688w" sizes="(min-width: 768px) 172px, 86px">
-                      <img class="price-list__image" src="files/cat-energy-slim-rice-500g@86w.png" srcset="files/cat-energy-slim-rice-500g@86w.png 86w, files/cat-energy-slim-rice-500g@172w.png 172w, files/cat-energy-slim-rice-500g@258w.png 258w, files/cat-energy-slim-rice-500g@344w.png 344w, files/cat-energy-slim-rice-500g@516w.png 516w, files/cat-energy-slim-rice-500g@688w.png 688w" sizes="(min-width: 768px) 172px, 86px" alt="Cтаканчик в сиреневых тонах с изображением рисовой каши и надписями: Cat Energy Slim, Рис, 500 г.">
+                      <img class="price-list__image" loading="lazy" src="files/cat-energy-slim-rice-500g@86w.png" srcset="files/cat-energy-slim-rice-500g@86w.png 86w, files/cat-energy-slim-rice-500g@172w.png 172w, files/cat-energy-slim-rice-500g@258w.png 258w, files/cat-energy-slim-rice-500g@344w.png 344w, files/cat-energy-slim-rice-500g@516w.png 516w, files/cat-energy-slim-rice-500g@688w.png 688w" sizes="(min-width: 768px) 172px, 86px" alt="Cтаканчик в сиреневых тонах с изображением рисовой каши и надписями: Cat Energy Slim, Рис, 500 г.">
                     </picture>
                   </a>
                 </td>
@@ -323,14 +323,14 @@
           <source type="image/webp" srcset="img/location.webp 1x, img/location@2x.webp 2x, img/location@3x.webp 3x, img/location@4x.webp 4x">
           <source media="(min-width: 769px)" srcset="img/location-desktop@1440w.png 1440w, img/location-desktop@2880w.png 2880w, img/location-desktop@4320w.png 4320w, img/location-desktop@5760w.png 5760w" sizes="100vw">
           <source media="(min-width: 321px)" srcset="img/location-tablet.png 1x, img/location-tablet@2x.png 2x, img/location-tablet@3x.png 3x, img/location-tablet@4x.png 4x">
-          <img class="contacts__img" src="img/location.png" srcset="img/location@2x.png 2x, img/location@3x.png 3x, img/location@4x.png 4x" alt="Расположение магазина на карте по адресу: Санкт-Петербург, ул. Большая Конюшенная, д. 19/8.">
+          <img class="contacts__img" loading="lazy" src="img/location.png" srcset="img/location@2x.png 2x, img/location@3x.png 3x, img/location@4x.png 4x" alt="Расположение магазина на карте по адресу: Санкт-Петербург, ул. Большая Конюшенная, д. 19/8.">
         </picture>
         <div class="contacts__interactive-map" id="contacts__interactive-map"></div>
       </section>
       <div class="page-footer__container container">
         <div class="page-footer__item">
           <a class="page-footer__logo" href="index.html">
-            <img class="page-footer__logo-img" src="img/footer-logo.svg" width="128" height="24" alt="Логотип: надпись CAT ENERGY.">
+            <img class="page-footer__logo-img" loading="lazy" src="img/footer-logo.svg" width="128" height="24" alt="Логотип: надпись CAT ENERGY.">
           </a>
         </div>
         <div class="page-footer__item">
