--- a/source/index.html
+++ b/source/index.html
@@ -121,7 +121,7 @@
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/customer-before-tablet.webp 1x, img/customer-before-tablet@2x.webp 2x, img/customer-before-tablet@3x.webp 3x, img/customer-before-tablet@4x.webp 4x">
                   <source type="image/webp" srcset="img/customer-before.webp 1x, img/customer-before@2x.webp 2x, img/customer-before@3x.webp 3x, img/customer-before@4x.webp 4x">
                   <source media="(min-width: 768px)" srcset="img/customer-before-tablet.png 1x, img/customer-before-tablet@2x.png 2x, img/customer-before-tablet@3x.png 3x, img/customer-before-tablet@4x.png 4x">
-                  <img class="separator__image" src="img/customer-before.png" srcset="img/customer-before@2x.png 2x, img/customer-before@3x.png 3x, img/customer-before@4x.png 4x" alt="Пушистый толстый кот.">
+                  <img class="separator__image" loading="lazy" src="img/customer-before.png" srcset="img/customer-before@2x.png 2x, img/customer-before@3x.png 3x, img/customer-before@4x.png 4x" alt="Пушистый толстый кот.">
                 </picture>
               </figure>
               <figure class="separator__item separator__item--after">
@@ -130,7 +130,7 @@
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/customer-after-tablet.webp 1x, img/customer-after-tablet@2x.webp 2x, img/customer-after-tablet@3x.webp 3x, img/customer-after-tablet@4x.webp 4x">
                   <source type="image/webp" srcset="img/customer-after.webp 1x, img/customer-after@2x.webp 2x, img/customer-after@3x.webp 3x, img/customer-after@4x.webp 4x">
                   <source media="(min-width: 768px)" srcset="img/customer-after-tablet.png 1x, img/customer-after-tablet@2x.png 2x, img/customer-after-tablet@3x.png 3x, img/customer-after-tablet@4x.png 4x">
-                  <img class="separator__image" src="img/customer-after.png" srcset="img/customer-after@2x.png 2x, img/customer-after@3x.png 3x, img/customer-after@4x.png 4x" alt="Очень тощий кот.">
+                  <img class="separator__image" loading="lazy" src="img/customer-after.png" srcset="img/customer-after@2x.png 2x, img/customer-after@3x.png 3x, img/customer-after@4x.png 4x" alt="Очень тощий кот.">
                 </picture>
               </figure>
             </div>
@@ -166,14 +166,14 @@
           <source type="image/webp" srcset="img/location.webp 1x, img/location@2x.webp 2x, img/location@3x.webp 3x, img/location@4x.webp 4x">
           <source media="(min-width: 769px)" srcset="img/location-desktop@1440w.png 1440w, img/location-desktop@2880w.png 2880w, img/location-desktop@4320w.png 4320w, img/location-desktop@5760w.png 5760w" sizes="100vw">
           <source media="(min-width: 321px)" srcset="img/location-tablet.png 1x, img/location-tablet@2x.png 2x, img/location-tablet@3x.png 3x, img/location-tablet@4x.png 4x">
-          <img class="contacts__img" src="img/location.png" srcset="img/location@2x.png 2x, img/location@3x.png 3x, img/location@4x.png 4x" alt="Расположение магазина на карте по адресу: Санкт-Петербург, ул. Большая Конюшенная, д. 19/8.">
+          <img class="contacts__img" loading="lazy" src="img/location.png" srcset="img/location@2x.png 2x, img/location@3x.png 3x, img/location@4x.png 4x" alt="Расположение магазина на карте по адресу: Санкт-Петербург, ул. Большая Конюшенная, д. 19/8.">
         </picture>
         <div class="contacts__interactive-map" id="contacts__interactive-map"></div>
       </section>
       <div class="page-footer__container container">
         <div class="page-footer__item">
           <a class="page-footer__logo">
-            <img class="page-footer__logo-img" src="img/footer-logo.svg" width="128" height="24" alt="Логотип: надпись CAT ENERGY.">
+            <img class="page-footer__logo-img" loading="lazy" src="img/footer-logo.svg" width="128" height="24" alt="Логотип: надпись CAT ENERGY.">
           </a>
         </div>
         <div class="page-footer__item">
